# CMakeProjectDemo

./: CMakeLists.txt  CMakeProjectDemo.cpp  SecondFile.cpp  SecondFile.h  config.h.in
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeProjectDemo.sln  CMakeProjectDemo.vcxproj  CMakeProjectDemo.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  install_manifest.txt
builds/math/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  cmake_install.cmake
math/: CMakeLists.txt
math2/: thirdfile.cpp  thirdfile.h
